# ml_ops_ex1_cc

./: .gitignore  README.md  evaluate.dockercompose.yml  evaluate.dockerfile  pyproject.toml  requirements.txt  tasks.py  train.dockercompose.yml  train.dockerfile
.devcontainer/: devcontainer.json
configs/: conf.yaml  model_conf.yaml
outputs/2026-01-07/15-50-49/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-07/15-59-44/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-07/16-01-42/.hydra/: hydra.yaml
src/exercise1/: api.py  data.py  evaluate.py  model.py  train.py  visualize.py
tests/: test_data.py
