[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "exercise1"
version = "0.0.1"
description = "hello"
authors = [
  { name = "jep", email = "your@email.com" },
]


keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "torch==2.6.0",
    "typer==0.15.1",
    "uvicorn==0.34.0",
    "matplotlib>=3.7.2",
    "torchvision>=0.15",
    "typer>=0.13.1",
    "scikit-learn>=1.8.0",
    "hydra-core>=1.3.2",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mkdocstrings-python==1.12.2",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120
lint.select = ["I"]

[tool.coverage.run]
omit = ["tests/*"]

[project.scripts]
train = "exercise1.train:main"
evaluate = "exercise1.evaluate:main"
